trunk/Archive2/f7/8031af320b07f0/output
main.cpp: In function 'int main()':
main.cpp:12:16: error: 'tuple_element_t' does not name a type
     using el = tuple_element_t<0, T>;
                ^
